--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,6 @@
 @import url("./global.css");
 
-
-
+/* Banner */
 .banner {
   background-color: var(--primary-5);
   color: var(--white);
@@ -12,6 +11,7 @@
   align-items: center;
   justify-content: center;
   gap: var(--s);
+  font-size: 0.9rem;
 }
 
 @media screen and (min-width: 768px) {
@@ -22,7 +22,7 @@
   }
 }
 
-/* ### HEADER ### */
+/* Header */
 header {
   position: fixed;
   width: 100%;
@@ -37,17 +37,19 @@ header {
 }
 
 #nav {
-  padding: var(--m);
+  padding: var(--s) var(--m);
   background-color: var(--white);
   width: 100%;
+  box-shadow: 0px 2px 6px 0px rgba(0,0,0,0.1);
 }
 
 
-
+/* Hero */
 #hero {
   position: relative;
   min-height: 100vh;
   z-index: 2;
+  padding-top: 180px;
 }
 
 #hero :first-child {
@@ -77,12 +79,53 @@ header {
   top: 0;
   left: 0;
   z-index: 1;
-  background: linear-gradient(90deg, #EBF0EB 0%, rgba(235, 240, 235, 0.9) 39%, rgba(235, 240, 235, 0) 83%);
+  background: linear-gradient(90deg, #EBF0EB 0%, rgba(235, 240, 235, 0.9) 39%, rgba(235, 240, 235, 0.3) 83%);
+}
+
+#hero-grid {
+  grid-template-areas: "a";
+  grid-template-columns: 1fr;
+}
+
+#hero-grid > div {
+  grid-area: a;
+}
+
+#hero-list-grid {
+  display: grid;
+  grid-template-columns: 1fr auto;
+}
+
+#hero-list {
+  font-size: 1.5rem;
+  font-weight: bold;
+  padding: 0;
+}
+
+#hero-list svg {
+  margin-top: var(--xs);
+}
+
+@media screen and (min-width: 768px) {
+  #hero-grid {
+    grid-template-areas: "a .";
+    grid-template-columns: 1.25fr 1fr;
+  }
+
+  #hero-list {
+    font-size: 1.25rem;
+    font-weight: bold;
+    padding: 0;
+  }
+
+  #hero::after {
+    background: linear-gradient(90deg, #EBF0EB 0%, rgba(235, 240, 235, 0.9) 39%, rgba(235, 240, 235, 0) 83%);
+  }
 }
 
 .reviews-grid {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: repeat(4, 1fr);
   gap: var(--s);
 }
 
@@ -92,8 +135,34 @@ header {
   }
 }
 
-/* Footer */
+/* Risk Free */
+#risk-free {
+  min-height: 100vh;
+  background-image: url('../img/prostate-banner-2.png');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
+@media screen and (min-width: 768px) {
+  #risk-free  {
+    min-height: 50vh;
+  }
+}
+
+/* Testimonials */
+#testimonials-list {
+  list-style: none;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  gap: var(--s);
+}
+
+/* Footer */
 #footer {
   color: var(--primary-0);
 }
