--- a/css/style.css
+++ b/css/style.css
@@ -166,3 +166,61 @@ header {
 #footer {
   color: var(--primary-0);
 }
+
+
+/* Misc */
+
+.cta-button-link {
+  position: relative;
+  font-size: 1.2rem;
+  font-weight: bold;
+  line-height: 1.1;
+  letter-spacing: 0.5px;
+  transition: all 0.2s;
+  text-decoration: none;
+  display: flex;
+  align-items: stretch;
+  text-align: center;
+  justify-content: center;
+  cursor: pointer;
+  box-shadow: 0px var(--xs) var(--xs) rgba(30, 30, 30, 0.1), 0px 0px var(--xs) rgba(30, 30, 30, 0.1);
+}
+
+.cta-button-link:hover {
+  transform: translateY(-2px);
+}
+
+.over-peel {
+  background-color: var(--secondary-5);
+  color: var(--white);
+  border-radius: var(--xs) 0 0 var(--xs) ;
+  padding: var(--m);
+  padding-right: calc( var(--m) + var(--xs) );
+  border: 1px solid var(--secondary-5);
+}
+
+.under-peel:before {
+  content: "";
+    position: absolute;
+    left: -14px;
+    top: -1px;
+    bottom: -1px;
+    z-index: 2;
+    width: 47px;
+    background: url(../img/btn-free-colr2.png) no-repeat center center;
+    background-size: 100% 100%;
+}
+.under-peel {
+  box-sizing: border-box;
+  display: flex;
+  align-items: center;
+  position: relative;
+  padding: var(--m);
+  top: 0;
+  bottom: 0;
+  width: 65px;
+  background: #ffffe2;
+  border: 1px dashed #c66b51;
+  border-radius: 0 var(--xs) var(--xs) 0;
+  color: var(--black);
+}
